--- a/particle/style.css
+++ b/particle/style.css
@@ -5,8 +5,10 @@ body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	background-color: #000;
 }
 
 canvas {
+	background-color: #000;
 	box-sizing: border-box;
 }
